--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,22 @@
         android:theme="@style/Theme.Catwell"
         tools:targetApi="31">
         <activity
+            android:name=".view.ScheduleConsultationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.DoctorDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.PaymentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ChatLogActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.HistoryConsultationDetailActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
