--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.Catwell"
         tools:targetApi="31">
         <activity
+            android:name=".view.TentangAplikasi"
+            android:exported="false" />
+        <activity
+            android:name=".view.EditProfileKucing"
+            android:exported="false" />
+        <activity
             android:name=".view.WelcomeScreenActivity"
             android:exported="false" />
         <activity
