--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:theme="@style/Theme.Catwell"
         tools:targetApi="31">
         <activity
+            android:name=".view.Room_VidioCall"
+            android:exported="false" />
+        <activity
+            android:name=".view.Pembayaran_Telepon"
+            android:exported="false" />
+        <activity
+            android:name=".view.SplashScreenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.Pilih_Sebagai"
+            android:exported="false" />
+        <activity
             android:name=".view.WelcomeScreenActivity"
             android:exported="false" />
         <activity
@@ -69,10 +81,11 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".view.SplashScreenActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Catwell">
+            android:name=".view.PembayaranChat"
+            android:exported="true">
+
+            <!-- android:label="@string/app_name" -->
+            <!-- android:theme="@style/Theme.Catwell"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
