--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,28 @@
         android:theme="@style/Theme.Catwell"
         tools:targetApi="31">
         <activity
+            android:name="Dokter.view.LupaPasswordDokter"
+            android:exported="false" />
+        <activity
+            android:name="Dokter.view.SignUp_Dokter"
+            android:exported="false" />
+        <activity
+            android:name="Dokter.view.Login_Dokter"
+            android:exported="false" />
+        <activity
+            android:name="Dokter.view.WelcomeScreen_Dokter"
+            android:exported="false" />
+        <activity
+            android:name=".view.Room_telephone"
+            android:exported="false" />
+        <activity
             android:name=".view.JadwalKonsultasiActivity"
             android:exported="false" />
-      <activity
+        <activity
             android:name=".view.TentangAplikasi"
             android:exported="false" />
         <activity
-            android:name=".view.Room_VidioCall"
+            android:name=".view.Room_Call"
             android:exported="false" />
         <activity
             android:name=".view.EditProfileKucing"
