update fitur konsultasi dan payment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,6 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Catwell"
+        tools:replace="android:allowBackup"
         tools:targetApi="31">
         <activity
             android:name="Dokter.view.LupaPasswordDokter"
@@ -117,7 +120,7 @@
             android:name=".view.WishListku"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".view.SplashScreenActivity"
             android:exported="false" />
         <activity
             android:name=".view.ProfileDokter"
@@ -135,7 +138,7 @@
               android:name=".view.ChatLogDoctorActivity"
               android:exported="false" />
         <activity
-            android:name=".view.SplashScreenActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Catwell">
             <intent-filter>
